[package]
name = "oom-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "=4.4.18", features = ["derive"] }
clap_lex = "=0.6.0"
crossterm = "=0.27.0"
ratatui = "=0.26.3"
regex = "1.13.1"
