[package]
name = "oom-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A terminal UI for OOM-killer forensics: reconstructs why the Linux kernel killed your process, from the scattered lines it logs."
authors = ["Ashfaaq98 <63553020+Ashfaaq98@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ashfaaq98/oom-tui"
homepage = "https://github.com/Ashfaaq98/oom-tui"
keywords = ["oom", "linux", "kernel", "tui", "sre"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = ["/.github"]

[lib]
name = "oom_tui"
path = "src/lib.rs"

[[bin]]
name = "oom-tui"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.103"
clap = { version = "=4.4.18", features = ["derive"] }
clap_lex = "=0.6.0"
crossterm = "=0.27.0"
ratatui = "=0.26.3"
regex = "1.13.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
